--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-doc/*
+doc/FHS_MDCs_Overview.pptx
+doc/FHS_resultFile_dictionary.txt
+doc/INTERNAL.md
+doc/MDCs_GWASfile_rename.R
+doc/SCALLOP_SC_Feb_26th_2018.pptx
