--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ doc/FHS_MDCs_Overview.pptx
 doc/FHS_resultFile_dictionary.txt
 doc/MDCs_GWASfile_rename.R
 doc/SCALLOP_SC_Feb_26th_2018.pptx
+doc/MalmoProteomicsKeyCleaned_tab1.csv
+doc/MDCs_resultFile dictionary.txt
+doc/170724- List of uniprot, target, aptamer ID info with proteins f....xls 
