--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ doc/SCALLOP_SC_Feb_26th_2018.pptx
 doc/MalmoProteomicsKeyCleaned_tab1.csv
 doc/MDCs_resultFile dictionary.txt
 doc/170724- List of uniprot, target, aptamer ID info with proteins f....xls 
+doc/Somamers_all_Passed_CV20.csv
