--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ doc/MalmoProteomicsKeyCleaned_tab1.csv
 doc/MDCs_resultFile dictionary.txt
 doc/170724- List of uniprot, target, aptamer ID info with proteins f....xls 
 doc/Somamers_all_Passed_CV20.csv
+METAL
