--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@ doc/MDCs_resultFile dictionary.txt
 doc/170724- List of uniprot, target, aptamer ID info with proteins f....xls 
 doc/Somamers_all_Passed_CV20.csv
 METAL
+st.bed
 work
